--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   margin: 0;
   box-sizing: border-box;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -20,7 +25,7 @@ a {
   display: flex;
   gap: 40px;
   justify-content: space-between;
-  padding: 50px;
+  padding: 40px;
 }
 
 @media screen and (max-width: 1200px) {
