--- a/src/component/LeftSection/style.css
+++ b/src/component/LeftSection/style.css
@@ -56,23 +56,27 @@
 
 .buttons__container {
     width: 100%;
-    margin: 10px 0;
+    margin: 10px 0 30px 0;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.buttons__container a:nth-child(1) {
+.buttons__container a:nth-child(1),
+.buttons__container a:nth-child(2) {
     width: 100%;
     padding: 9px 18px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 100px;
+    transition: 0.2s ease;
+}
+
+.buttons__container a:nth-child(1) {
     background-color: #0057ff;
     color: #fff;
     border: 1px solid transparent;
-    border-radius: 100px;
-    transition: 0.2s ease;
 }
 
 .buttons__container a:nth-child(1):hover {
@@ -80,20 +84,120 @@
 }
 
 .buttons__container a:nth-child(2) {
-    width: 100%;
-    padding: 9px 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: #f5f8ff;
     color: #0057ff;
     border: 1px solid #dee8ff;
-    border-radius: 100px;
-    transition: 0.2s ease;
 }
 
 .buttons__container a:nth-child(2):hover {
     background-color: #0055ff13;
+}
+
+.hire__container {
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 10px 20px 5px;
+    border: 1px solid #dee8ff;
+    border-radius: 5px;
+    color: #191919;
+}
+
+.hire__container .hire__text {
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.hire__button {
+    padding: 15px 0;
+    border-top: 1px solid #dee8ff;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.hire__button svg:first-child {
+    width: 19px;
+    height: 19px;
+    margin-right: 10px;
+    margin-bottom: auto;
+    fill: #0057ff;
+}
+
+.hire__button__text {
+    display: inline-block;
+    flex: 1;
+    line-height: 1.3;
+    word-break: break-all;
+}
+
+.hire__button__text p:first-child {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.hire__button__text p:last-child {
+    color: #707070;
+    display: block;
+    font-size: 11px;
+}
+
+.hire__button svg:last-child {
+    width: 10px;
+    height: 10px;
+    margin-left: 10px;
+    fill: #0057ff;
+    opacity: 0.5;
+}
+
+.hire__button:hover {
+    color: #0057ff;
+}
+
+.hire__button:hover svg:last-child {
+    color: #0057ff;
+    opacity: 1;
+}
+
+.webLinks__container {
+    width: 100%;
+}
+
+.webLinks__container p {
+    color: #707070;
+    font-size: 11px;
+    line-height: 30px;
+    font-weight: bolder;
+}
+
+.webLinks__container .icon__conatiner {
+    display: flex;
+    gap: 5px;
+}
+
+.webLinks__container .icon__conatiner .icon {
+    width: 36px;
+    height: 36px;
+    display: grid;
+    place-items: center;
+    border: 1px solid #e8e8e8;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.webLinks__container .icon__conatiner .icon:hover {
+    background-color: #e8e8e8;
+}
+
+.webLinks__container .icon__conatiner .icon:nth-child(1):hover svg {
+    fill: #0077b5;
+    transition: 0.2s ease;
+}
+
+.webLinks__container .icon__conatiner .icon:nth-child(2):hover svg {
+    fill: #CD201F;
+    transition: 0.2s ease;
 }
 
 @media screen and (min-width: 604px) and (max-width: 1200px) {
@@ -112,11 +216,21 @@
     .buttons__container a:nth-child(2) {
         max-width: 300px;
     }
+
+    .hire__container {
+        max-width: 610px;
+    }
+
+    .webLinks__container {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 1201px) {
     .left__container {
         width: 360px;
+        height: calc(100vh - 80px);
+        overflow-y: auto;
         background-color: #fff;
         box-shadow: 0 1px 3px rgba(25, 25, 25, .1);
     }
