--- a/src/component/RightSection/style.css
+++ b/src/component/RightSection/style.css
@@ -1,3 +1,41 @@
 .right__container {
     flex: 1;
+    padding: 0 30px 25px;
+}
+
+.all__left__buttons {
+    margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.all__left__buttons button {
+    font-family: 'Poppins', sans-serif;
+    outline: none;
+    border: none;
+    padding: 9px 20px;
+    border-radius: 100px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+    cursor: pointer;
+}
+
+.all__left__buttons button.active {
+    background-color: #191919;
+    color: #fff;
+}
+
+@media screen and (min-width: 1201px) {
+    .right__container {
+        padding-left: 30px;
+    }
+
+    .all__left__buttons {
+        justify-content: flex-start;
+    }
 }
