--- a/src/component/RightSection/style.css
+++ b/src/component/RightSection/style.css
@@ -8,6 +8,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 2;
     width: 100%;
     background-color: #f9f9f9;
     padding: 10px;
@@ -41,6 +42,7 @@
 
 .right__image__container {
     width: 100%;
+    padding: 0 10px;
 }
 
 .right__image__wrapper {
@@ -49,6 +51,7 @@
 }
 
 .right__image__card {
+    position: relative;
     width: 100%;
     margin-bottom: 5px;
     cursor: zoom-in;
@@ -57,6 +60,24 @@
 .right__image__card img,
 .right__image__card video {
     width: 100%;
+}
+
+.card__info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 6px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -75px 36px -28px inset, rgba(0, 0, 0, 0.35) 0px 75px 36px -28px inset;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s ease-in-out, visibility 300ms ease-in-out;
+}
+
+.right__image__card:hover .card__info {
+    z-index: 1;
+    opacity: 1;
+    visibility: visible;
 }
 
 @media screen and (min-width: 1201px) {
@@ -76,5 +97,9 @@
 
     .information__container {
         display: none;
+    }
+
+    .right__image__container {
+        padding: 0;
     }
 }
