--- a/src/component/RightSection/style.css
+++ b/src/component/RightSection/style.css
@@ -13,7 +13,7 @@
     background-color: #f9f9f9;
     padding: 10px;
     display: flex;
-    gap: 10px;
+    gap: 10px 20px;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
@@ -46,7 +46,7 @@
 }
 
 .right__image__wrapper {
-    columns: 4 20rem;
+    columns: 3 20rem;
     gap: 10px;
 }
 
@@ -71,7 +71,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px -75px 36px -28px inset, rgba(0, 0, 0, 0.35) 0px 75px 36px -28px inset;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.2s ease-in-out, visibility 300ms ease-in-out;
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
 }
 
 .right__image__card:hover .card__info {
