--- a/src/component/FullScreenSection/style.css
+++ b/src/component/FullScreenSection/style.css
@@ -59,6 +59,6 @@
     position: relative;
     z-index: 5;
     width: 100%;
-    height: calc((85/100) * 100dvh);
+    height: calc((85/100) * 100svh);
     object-fit: contain;
 }
