--- a/src/component/RightSection/style.css
+++ b/src/component/RightSection/style.css
@@ -13,7 +13,8 @@
     background-color: #f9f9f9;
     padding: 10px;
     display: flex;
-    gap: 10px 20px;
+    gap: 10px 5px;
+    /* gap: 10px 20px; */
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
@@ -25,7 +26,7 @@
     border: none;
     padding: 9px 20px;
     border-radius: 100px;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 600;
     line-height: 1;
     cursor: pointer;
