refactor Left & Right section

--- a/src/component/FullScreenSection/style.css
+++ b/src/component/FullScreenSection/style.css
@@ -62,6 +62,6 @@
     position: relative;
     z-index: 5;
     width: 100%;
-    height: calc((85/100) * 100svh);
+    height: calc((85/100) * 100dvh);
     object-fit: contain;
 }
